<resources>
    <string name="app_name">Mata Kuliah</string>
    <string name="title_activity_mainmenu">Mainmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tahun_ajaran">Tahun Ajaran</string>
    <string name="materi">Materi</string>
    <string name="forum">Forum</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="daftar_peserta_kelas">Daftar Peserta Kelas</string>
    <string name="isi_status">Isi Status</string>
    <string name="upload_file">Upload File</string>
    <string name="m_taufiq_nuruzzaman_s_si_m_t">M. Taufiq Nuruzzaman, S.Si., M.T</string>
    <string name="dosen_s1_teknik_informatika">Dosen- S1 Teknik Informatika</string>
    <string name="rahmat_hidayat_s_kom_m_cs">Rahmat Hidayat, S.Kom, M.Cs</string>
    <string name="agus_mulyanto_s_si_m_kom">Agus Mulyanto, S.Si., M.Kom</string>
    <string name="kelompok_1">KELOMPOK 1</string>
    <string name="suka_learning">SUKA LEARNING</string>
    <string name="siti_maryam">Siti Maryam</string>
    <string name="fakultas">Fakultas</string>
    <string name="sains_dan_teknologi">Sains dan Teknologi</string>
    <string name="program_studi">Program Studi</string>
    <string name="s1_teknik_informatika">S1 - Teknik Informatika</string>
    <string name="terakhir_login">Terakhir Login</string>
    <string name="total_login">Total Login</string>
    <string name="xxxxxxxx">xxxxxxxx</string>
    <string name="aktivitas_semester_gasal_tahun_akademik_2018_2019">Aktivitas Semester Gasal Tahun Akademik 2018/2019</string>
    <string name="belum_ada_update_aktivitas">Belum Ada Update Aktivitas</string>
    <string name="materi_dari_mahasiswa"><![CDATA[>> Materi Dari Mahasiswa]]></string>
    <string name="lihat_selengkapnya">Lihat Selengkapnya</string>
    <string name="nim">NIM</string>
    <string name="no">No</string>
    <string name="Nama">Nama</string>
    <string name="_16650013">16650013</string>
    <string name="_1">1</string>

    <string-array name="tahunajaran">
        <item>Tahun Ajaran 2018/2019 (Gasal)</item>
        <item>2018/2019 (Genap)</item>
        <item>2017/2018 (Gasal)</item>
        <item>2017/2018 (Genap)</item>
        <item>2016/2017 (Gasal)</item>
        <item>2016/2017 (Genap)</item>
    </string-array>

    <string-array name="matakuliah">
        <item>Rekayasa Perangkat Lunak</item>
        <item>Pemrograman Berorientasi Object</item>
        <item>Kecerdasan Buatan</item>
        <item>Jaringan Komputer</item>
        <item>Sistem Informasi Manajemen</item>
        <item>Komputer dan Masyarakat</item>
    </string-array>

</resources>
