<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/tiga"
        android:scaleType="centerCrop"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Daftar Mahasiswa"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginLeft="90dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textSize="20sp"
            android:layout_marginLeft="70dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama"
            android:textSize="20sp"
            android:layout_marginLeft="90dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_16650013"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="95dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siti_maryam"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="230dp"
        />
</RelativeLayout>
